--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Server
 on:
   push:
     branches:
-      - dev3
+      - dev
 
 jobs:
   deploy:
@@ -13,16 +13,24 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Use Node.js 16
+      uses: actions/setup-node@v4
+      with:
+        node-version: '16'
+
+    - name: Install dependencies
+      run: npm install
+
     - name: Deploy to Server
       run: |
         const FtpDeploy = require('ftp-deploy');
 
         const config = {
-          host: ${{ secrets.FTP_SERVER }},
+          host: ${{ secrets.FTP_HOST }},
           username: ${{ secrets.FTP_USERNAME }},
-          privateKey: ${{ secrets.SSH_PRIVATE_KEY }},
+          privateKey: ${{ secrets.SH_PRIVATE_KEY }},
           localRoot: './'
-        
+          
           // other configuration options...
         };
 
