--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -26,3 +26,5 @@ jobs:
             **/.git*
             **/.git*/**
             **/node_modules/**
+            **/*.zip**
+            **/*.rar**
